hphp/hack/test/typecheck/array/safe_vector_array/varray_with_array_map_returns_vect_like_array.php.exp
File "varray_with_array_map_returns_vect_like_array.php", line 4, characters 10-52:
Invalid return type (Typing[4110])
  File "varray_with_array_map_returns_vect_like_array.php", line 3, characters 35-45:
  Expected `vec<int>`
  File "varray_with_array_map_returns_vect_like_array.php", line 4, characters 31-51:
  But got `dict<[unresolved], _>` because legacy arrays have been unified with Hack arrays
File "varray_with_array_map_returns_vect_like_array.php", line 4, characters 10-52:
Invalid return type (Typing[4110])
  File "varray_with_array_map_returns_vect_like_array.php", line 3, characters 35-45:
  Expected `vec<int>`
  File "varray_with_array_map_returns_vect_like_array.php", line 4, characters 31-51:
  But got `dict<int, _>` because legacy arrays have been unified with Hack arrays
