hphp/hack/test/typecheck/array/safe_vector_array/varray_with_array_map_returns_vect_like_array.php
<?hh // strict

function providesVectLikeArray(): array<int> {
  return array_map($x ==> $x, varray[1, 2, 3, 4, 5]);
}
